--- a/20220819/view/page.html
+++ b/20220819/view/page.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   </head>
   <body>
-    첫 페이지
+    <h1>유저 페이지</h1>
+    <ul>
+      <% data.forEach(function(user){ %>
+      <!-- 이곳이 data 배열의 개수만큼 반복해서 내보낸다.  -->
+      <li class="item">
+        <span class="name"><%= user.name %></span>님 <%= user.age %>살 코멘트
+        <%= user.msg %> <input type="text" class="text" />
+        <button class="itemBtn">글 등록</button>
+        <a href="">등록글 보러가기</a>
+      </li>
+      <% }) %>
+    </ul>
   </body>
+  <script>
+    // dom이 모두 생겼을떼
+    window.onload = function () {
+      // 배열로 담긴다
+      // 모든 item 클래스가 붙은 태그 가져오고
+      let items = document.querySelectorAll(".item");
+      // 개수만큼 반복시켜서
+      items.forEach((e) => {
+        // 해당 인덱스 태그에서 itemBtn 클래스 찾고 클릭 이벤트 붙여줌
+        e.querySelector(".itemBtn").onclick = function () {
+          let text = e.querySelector(".text").value;
+          let name = e.querySelector(".name").innerHTML;
+          $.ajax({
+            // 요청할 url
+            url: "/create_post",
+            // 요청 방식
+            type: "post",
+            // 전달할 값
+            data: { name, text },
+          });
+          e.querySelector(".text").value = "";
+        };
+      });
+    };
+  </script>
 </html>
